tests/replica_limits/manifests/deployment-no-annotation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-no-annotation
  namespace: check-kyverno
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
