tests/replica_limits/manifests/deployment-with-annotation-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-annotation
  namespace: check-kyverno-dev
  annotations:
    opso.lan/max-replicas: "3"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
