tests/replica_limits/manifests/statefulset-no-annotation-dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-no-annotation
  namespace: check-kyverno-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
