tests/replica_limits/manifests/statefulset-with-annotation-stable.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-with-annotation
  namespace: check-kyverno-stable
  annotations:
    opso.lan/max-replicas: "3"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
