tests/replica_limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-replicas-test
policies:
  - ../../policies/04-replicas-limit.yaml
variables: variables.yaml
resources:
  - manifests/deployment-with-annotation.yaml
  - manifests/deployment-with-annotation-dev.yaml
  - manifests/deployment-no-annotation.yaml
  - manifests/deployment-no-annotation-stable.yaml
  - manifests/statefulset-with-annotation.yaml
  - manifests/statefulset-with-annotation-stable.yaml
  - manifests/statefulset-no-annotation.yaml
  - manifests/statefulset-no-annotation-dev.yaml
  - manifests/hpa-with-annotation.yaml
  - manifests/hpa-with-annotation-dev.yaml
  - manifests/hpa-no-annotation.yaml
  - manifests/hpa-no-annotation-stable.yaml
results:
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno/deployment-with-annotation
    kind: Deployment
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno-dev/deployment-with-annotation
    kind: Deployment
    result: fail
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno/deployment-no-annotation
    kind: Deployment
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno-stable/deployment-no-annotation
    kind: Deployment
    result: fail
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno/statefulset-with-annotation
    kind: StatefulSet
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno-stable/statefulset-with-annotation
    kind: StatefulSet
    result: fail
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno/statefulset-no-annotation
    kind: StatefulSet
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-deployment-daemonset
    resources:
      - check-kyverno-dev/statefulset-no-annotation
    kind: StatefulSet
    result: fail
  - policy: limit-replicas
    rule: check-replica-limit-hpa
    resources:
      - check-kyverno/hpa-with-annotation
    kind: HorizontalPodAutoscaler
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-hpa
    resources:
      - check-kyverno-dev/hpa-with-annotation
    kind: HorizontalPodAutoscaler
    result: fail
  - policy: limit-replicas
    rule: check-replica-limit-hpa
    resources:
      - check-kyverno/hpa-no-annotation
    kind: HorizontalPodAutoscaler
    result: skip
  - policy: limit-replicas
    rule: check-replica-limit-hpa
    resources:
      - check-kyverno-stable/hpa-no-annotation
    kind: HorizontalPodAutoscaler
    result: fail
